--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="game-container">
         <div class="game-info">
-            <h1>BREAKOUT! by Derek</h1>
+            <h1>BREAKOUT!</h1>
             <p>Use LEFT and RIGHT arrow keys to move the paddle</p>
             <p>SPACE: Launch ball | P: Pause | R: Restart | Q: Quit</p>
         </div>
